--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,13 @@
 body { 
   padding-top: 60px
 }
+
+.navbar-dark .navbar-toggle .icon-bar {
+  background-color: #000;
+}
+
+ul.navbar-nav li a:hover,
+ul.navbar-nav li a:focus {
+  color: #337ab7;
+  background-color: #FFF; 
+}
