--- a/app/assets/javascripts/templates/navbar.html
+++ b/app/assets/javascripts/templates/navbar.html
@@ -10,7 +10,7 @@
       <a class="navbar-brand visible-xs">Beaches</a>
     </div>
     <div class="hidden-xs">
-      <ul class="nav navbar-nav">
+      <ul class="nav nav-pills navbar-nav">
         <a class="navbar-brand">Beaches</a>
         <li ng-hide="signedIn()" ><a href="#/login">Log In</a></li>
         <li ng-hide="signedIn()" ui-sref-active="active"><a href="#/register">Register</a></li>
