--- a/app/assets/javascripts/templates/navbar.html
+++ b/app/assets/javascripts/templates/navbar.html
@@ -24,7 +24,7 @@
       <ul class="nav navbar-nav">
         <li ng-hide="signedIn()" ><a href="#/login" ng-click="isCollapsed = !isCollapsed">Log In</a></li>
         <li ng-hide="signedIn()" ui-sref-active="active"><a href="#/register" ng-click="isCollapsed = !isCollapsed">Register</a></li>
-        <li ng-show="signedIn()" ui-sref-active="active"><a href="#/beaches">All Beaches</a></li>
+        <li ng-show="signedIn()" ui-sref-active="active"><a href="#/beaches" ng-click="isCollapsed = !isCollapsed">All Beaches</a></li>
         <li ng-show="signedIn()" ui-sref-active="active"><a href="#/beaches/new" ng-click="isCollapsed = !isCollapsed">Add a Beach</a></li>
         <li ng-show="signedIn()" ui-sref-active="active"><a ng-click="isCollapsed = !isCollapsed; logout()">Log Out</a></li>
       </ul>
