--- a/app/assets/javascripts/templates/beaches/index.html
+++ b/app/assets/javascripts/templates/beaches/index.html
@@ -2,10 +2,17 @@
   <div class="col-sm-4">
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h4><a ui-sref="home.beach({id: beach.id})">{{ beach.name }}</a></h4>
+        <h4>
+          <a ui-sref="home.beach({id: beach.id})">{{ beach.name }}</a>
+          <span class="beach-votes">
+            <span>+</span>
+            <span>{{ beach.score }}</span>
+            <span>&ndash;&nbsp;&nbsp;</span>
+          </span>
+        </h4>
       </div>
       <div class="panel-body fixed-panel">
-        <p><strong>Address:</strong> {{ beach.address }}, {{ beach.city }} {{ beach.state }} {{ beach.zip }}</p>
+        <p><strong>Address:</strong> {{ beach.address }}<span ng-show="beach.address">,</span> {{ beach.city }}<span ng-show="beach.city">,</span> {{ beach.state }} {{ beach.zip }}</p>
         <p><em>{{ beach.description | characters:275 :true }}</em></p>
         <a ng-click="isCollapsed = !isCollapsed">{{ beach.score }} points | {{ beach.comments.length }} comments</a>
         <br><br>
