--- a/app/assets/javascripts/templates/navbar.html
+++ b/app/assets/javascripts/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav ng-controller="NavController" class="navbar navbar-custom navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" ng-click="isCollapsed = !isCollapsed">
+      <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
