--- a/app/assets/javascripts/templates/beaches/index.html
+++ b/app/assets/javascripts/templates/beaches/index.html
@@ -1,4 +1,4 @@
-<div ng-repeat="beach in index.beaches">
+<div ng-repeat="beach in ctrl.beaches">
   <div class="col-sm-4">
     <div class="panel panel-info">
       <div class="panel-heading">
