--- a/app/assets/javascripts/templates/beaches/new.html
+++ b/app/assets/javascripts/templates/beaches/new.html
@@ -1,3 +1,4 @@
-<form class="form-horizontal" ng-submit="new.addBeach()">
+<h2 class="page-header">Add a Beach</h2>
+<form class="form-horizontal" ng-submit="ctrl.addBeach()">
   <div ng-include="'beaches/_form.html'"></div>
 </form>
