add user_id to beach model, define relationships between user and beach models, edit addBeach method in NewBeachController to associate current user with created beach

--- a/app/assets/javascripts/templates/beaches/new.html
+++ b/app/assets/javascripts/templates/beaches/new.html
@@ -1,4 +1,4 @@
 <h2 class="page-header">Add a Beach</h2>
-<form class="form-horizontal" ng-submit="ctrl.addBeach()">
+<form class="form-horizontal" ng-submit="ctrl.addBeach(ctrl.user)">
   <div ng-include="'beaches/_form.html'"></div>
 </form>
