--- a/app/assets/javascripts/templates/beaches/_form.html
+++ b/app/assets/javascripts/templates/beaches/_form.html
@@ -1,4 +1,5 @@
 <div class="form-group">
+  <input type="hidden" >
   <label for="name" class="col-sm-1 control-label">Name</label>
   <div class="col-sm-11">
     <input type="text" ng-model="ctrl.beach.name" class="form-control" id="name" placeholder="Beach Name" autofocus="true"/>
