--- a/app/assets/javascripts/templates/beaches/show.html
+++ b/app/assets/javascripts/templates/beaches/show.html
@@ -19,9 +19,9 @@
     <p><strong>Shopping Onsite:</strong> {{ ctrl.beach.shopping_onsite ? "Yes" : "No" }}</p>
     <p><strong>Pier:</strong> {{ ctrl.beach.pier ? "Yes" : "No" }}</p>
     <p><strong>Firepits:</strong> {{ ctrl.beach.firepits ? "Yes" : "No" }}</p>
-    <p><strong>Dogs Allowed:</strong> {{ ctrl.beach.dogs_allowed ? "Yes" : "No" }}</p>  
+    <p><strong>Dogs Allowed:</strong> {{ ctrl.beach.dogs_allowed ? "Yes" : "No" }}</p>
     <a ui-sref="home.editBeach({id: ctrl.beach.id})" class="btn btn-info btn-sm">Edit</a>
-    <a ng-click="ctrl.deleteBeach(ctrl.beach)" class="btn btn-info btn-sm">Delete</a>
+    <a ng-click="ctrl.deleteBeach(ctrl.beach)" class="btn btn-info btn-sm" ng-show="ctrl.user.id === ctrl.beach.user_id">Delete</a>
   </div>
 
   <div class="col-sm-8">
