--- a/app/assets/javascripts/templates/beaches/show.html
+++ b/app/assets/javascripts/templates/beaches/show.html
@@ -25,6 +25,16 @@
   </div>
 
   <div class="col-sm-8">
+
+  <form ng-submit="ctrl.addComment(ctrl.user, ctrl.beach)">
+    <div class="input-group">
+      <input type="text" ng-model="ctrl.comment.note" placeholder="add comment" class="form-control">
+      <span class="input-group-btn">
+        <input type="submit" class="btn btn-info btn-sm" value="Save"/>  
+      </span>
+    </div>
+  </form>
+
     <div ng-repeat="comment in ctrl.beach.comments" class="shape">
       <span class="score">+</span>
       <span class="score">{{ comment.score }}</span>
