add commentor usernames on beach index page using directive, refactor beach show page to use same directive

--- a/app/assets/javascripts/templates/beaches/index.html
+++ b/app/assets/javascripts/templates/beaches/index.html
@@ -19,10 +19,7 @@
 
         <div uib-collapse="!isCollapsed">
           <p ng-repeat="comment in beach.comments | limitTo:10">
-            <span>+</span>
-            <span>{{ comment.score }}</span>
-            <span>&ndash;&nbsp;&nbsp;</span>
-            {{ comment.note }}
+            <comment comment="comment"></comment>
           </p>
           <a ui-sref="home.beach({id: beach.id})" class="btn btn-info btn-sm">More</a>
         </div>
