--- a/app/assets/javascripts/templates/beaches/show.html
+++ b/app/assets/javascripts/templates/beaches/show.html
@@ -35,11 +35,8 @@
     </div>
   </form>
 
-    <div ng-repeat="comment in ctrl.comments" class="shape">
-      <span>+</span>
-      <span>{{ comment.score }}</span>
-      <span>&ndash;&nbsp;&nbsp;</span>
-      {{ comment.user.username }}: {{ comment.note }}
+    <div ng-repeat="comment in ctrl.beach.comments" class="shape">
+      <comment comment="comment"></comment>
     </div>
   </div>
 </div>
