--- a/app/assets/javascripts/templates/beaches/index.html
+++ b/app/assets/javascripts/templates/beaches/index.html
@@ -5,9 +5,9 @@
         <h4>
           <a ui-sref="home.beach({id: beach.id})">{{ beach.name }}</a>
           <span class="beach-votes">
-            <span ng-click="ctrl.upvote(beach)">+</span>
+            <button ng-click="ctrl.upvote(beach)" class="btn btn-primary btn-xs">+</button>
             <span>{{ beach.score }}</span>
-            <span ng-click="ctrl.downvote(beach)">&ndash;&nbsp;&nbsp;</span>
+            <button ng-click="ctrl.downvote(beach)" class="btn btn-primary btn-xs">&ndash;</button>
           </span>
         </h4>
       </div>
