--- a/app/assets/javascripts/templates/beaches/show.html
+++ b/app/assets/javascripts/templates/beaches/show.html
@@ -36,7 +36,7 @@
   </form>
 
     <div ng-repeat="comment in ctrl.beach.comments" class="shape">
-      <comment comment="comment"></comment>
+      <comment comment="comment" beach="ctrl.beach"></comment>
     </div>
   </div>
 </div>
