--- a/app/assets/javascripts/templates/beaches/new.html
+++ b/app/assets/javascripts/templates/beaches/new.html
@@ -1,4 +1,4 @@
 <h2 class="page-header">Add a Beach</h2>
-<form class="form-horizontal" ng-submit="ctrl.addBeach(ctrl.user)">
+<form class="form-horizontal" ng-submit="ctrl.addBeach(ctrl.user)" name="beachForm" novalidate>
   <div ng-include="'beaches/_form.html'"></div>
 </form>
