--- a/app/assets/javascripts/templates/beaches/show.html
+++ b/app/assets/javascripts/templates/beaches/show.html
@@ -26,11 +26,14 @@
 
   <div class="col-sm-8">
 
-  <form ng-submit="ctrl.addComment(ctrl.user, ctrl.beach)">
-    <div class="input-group">
-      <input type="text" ng-model="ctrl.comment.note" placeholder="add comment" class="form-control">
+  <form ng-submit="ctrl.addComment(ctrl.user, ctrl.beach)" name="commentForm" novalidate>
+    <div class="input-group" ng-class="{ 'has-error': commentForm.note.$touched && commentForm.note.$invalid }">
+      <input type="text" ng-model="ctrl.comment.note" name="note" placeholder="add comment" class="form-control" ng-maxlength="140">
+      <div class="help-block" ng-messages="commentForm.note.$error" ng-if="commentForm.note.$touched">
+        <p ng-message="maxlength">Comments must be 140 characters or less.</p>
+      </div>
       <span class="input-group-btn">
-        <input type="submit" class="btn btn-info btn-sm" value="Save"/>  
+        <input type="submit" class="btn btn-info btn-sm" value="Save" ng-disabled="commentForm.$invalid">  
       </span>
     </div>
   </form>
